# TinyGPT

./: .gitignore  CMakeLists.txt  Incluir.md  README.md  setup_symbiosis.sh
.github/workflows/: ci.yml
addons/rafaelia_core/: CMakeLists.txt  LICENSE-RAFAELIA.txt  NOTICE-RAFAELIA.txt  README.md  rmr_engine.c  vectra_dispatch.c  vectra_fallback.c
addons/rafaelia_core/asm/arm32/: vectra_pulse.S
addons/rafaelia_core/asm/arm64/: vectra_pulse.S
addons/rafaelia_core/docs/: ARCHITECTURE.md  COMPLIANCE.md
addons/rafaelia_core/include/: rafaelia_arch_identity.h  rafaelia_backend.h  rafaelia_contract.h  rmr_engine.h
addons/rafaelia_core/scripts/: build_android_addon.sh
demo/: CMakeLists.txt
docs/: rafaelia-addon.md
geolm/: CMakeLists.txt
geolm/asm/: geolm_core.S
geolm/include/: geolm_api.h
scripts/: bootstrap_submodules.sh  build_all_asm_repo.sh  build_asm_only.sh  convert_all_to_asm.py
src/: CMakeLists.txt
test/: CMakeLists.txt
