cmake_minimum_required(VERSION 3.15)
project(RafaelIA_core C ASM)

option(RAFAELIA_BUILD_ADDON "Build RafaelIA addon library" ON)
option(RAFAELIA_ENABLE_NEON "Enable ARM NEON tuned flags when supported" OFF)
option(RAFAELIA_ENABLE_SIMD "Enable x86 SIMD tuned flags when supported" OFF)

if (NOT RAFAELIA_BUILD_ADDON)
    return()
endif ()

set(RAFAELIA_CORE_SOURCES
    rmr_engine.c
    vectra_dispatch.c
)

set(RAFAELIA_ARCH_ID_HEX "0xA00000FF")
set(RAFAELIA_ARCH_ID_NAME "fallback")
set(RAFAELIA_BACKEND_IS_ASM OFF)

if (ANDROID)
    if (ANDROID_ABI STREQUAL "arm64-v8a")
        list(APPEND RAFAELIA_CORE_SOURCES asm/arm64/vectra_pulse.S)
        add_compile_definitions(RAFAELIA_ARCH_ARM64=1)
        set(RAFAELIA_BACKEND_IS_ASM ON)
        set(RAFAELIA_ARCH_ID_HEX "0xA0640001")
        set(RAFAELIA_ARCH_ID_NAME "arm64-v8a")
    elseif (ANDROID_ABI STREQUAL "armeabi-v7a")
        list(APPEND RAFAELIA_CORE_SOURCES asm/arm32/vectra_pulse.S)
        add_compile_definitions(RAFAELIA_ARCH_ARM32=1)
        set(RAFAELIA_BACKEND_IS_ASM ON)
        set(RAFAELIA_ARCH_ID_HEX "0xA0320002")
        set(RAFAELIA_ARCH_ID_NAME "armeabi-v7a")
    elseif (ANDROID_ABI STREQUAL "x86")
        list(APPEND RAFAELIA_CORE_SOURCES vectra_fallback.c)
        add_compile_definitions(RAFAELIA_ARCH_X86=1 RAFAELIA_ARCH_FALLBACK=1)
        set(RAFAELIA_ARCH_ID_HEX "0xA0860003")
        set(RAFAELIA_ARCH_ID_NAME "android-x86-fallback")
    elseif (ANDROID_ABI STREQUAL "x86_64")
        list(APPEND RAFAELIA_CORE_SOURCES vectra_fallback.c)
        add_compile_definitions(RAFAELIA_ARCH_X86_64=1 RAFAELIA_ARCH_FALLBACK=1)
        set(RAFAELIA_ARCH_ID_HEX "0xA8640004")
        set(RAFAELIA_ARCH_ID_NAME "android-x86_64-fallback")
    else ()
        list(APPEND RAFAELIA_CORE_SOURCES vectra_fallback.c)
        add_compile_definitions(RAFAELIA_ARCH_FALLBACK=1)
        message(STATUS "RafaelIA: unknown ANDROID_ABI='${ANDROID_ABI}', forcing fallback")
    endif ()
else ()
    if (CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64)$")
        list(APPEND RAFAELIA_CORE_SOURCES asm/arm64/vectra_pulse.S)
        add_compile_definitions(RAFAELIA_ARCH_ARM64=1)
        set(RAFAELIA_ARCH_ID_HEX "0xA0640001")
        set(RAFAELIA_ARCH_ID_NAME "arm64")
    elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "^(armv7|armv7l|arm)$")
        list(APPEND RAFAELIA_CORE_SOURCES asm/arm32/vectra_pulse.S)
        add_compile_definitions(RAFAELIA_ARCH_ARM32=1)
        set(RAFAELIA_ARCH_ID_HEX "0xA0320002")
        set(RAFAELIA_ARCH_ID_NAME "arm32")
    elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|amd64)$")
        list(APPEND RAFAELIA_CORE_SOURCES vectra_fallback.c)
        add_compile_definitions(RAFAELIA_ARCH_X86_64=1 RAFAELIA_ARCH_FALLBACK=1)
        set(RAFAELIA_ARCH_ID_HEX "0xA8640004")
        set(RAFAELIA_ARCH_ID_NAME "x86_64-fallback")
    elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86|i[3-6]86)$")
        list(APPEND RAFAELIA_CORE_SOURCES vectra_fallback.c)
        add_compile_definitions(RAFAELIA_ARCH_X86=1 RAFAELIA_ARCH_FALLBACK=1)
        set(RAFAELIA_ARCH_ID_HEX "0xA0860003")
        set(RAFAELIA_ARCH_ID_NAME "x86-fallback")
    elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "^(riscv64)$")
        list(APPEND RAFAELIA_CORE_SOURCES vectra_fallback.c)
        add_compile_definitions(RAFAELIA_ARCH_RISCV64=1 RAFAELIA_ARCH_FALLBACK=1)
        set(RAFAELIA_ARCH_ID_HEX "0xA7640005")
        set(RAFAELIA_ARCH_ID_NAME "riscv64-fallback")
    elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "^(ppc64le|powerpc64le)$")
        list(APPEND RAFAELIA_CORE_SOURCES vectra_fallback.c)
        add_compile_definitions(RAFAELIA_ARCH_PPC64LE=1 RAFAELIA_ARCH_FALLBACK=1)
        set(RAFAELIA_ARCH_ID_HEX "0xAC640006")
        set(RAFAELIA_ARCH_ID_NAME "ppc64le-fallback")
    elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "^(s390x)$")
        list(APPEND RAFAELIA_CORE_SOURCES vectra_fallback.c)
        add_compile_definitions(RAFAELIA_ARCH_S390X=1 RAFAELIA_ARCH_FALLBACK=1)
        set(RAFAELIA_ARCH_ID_HEX "0xA3900007")
        set(RAFAELIA_ARCH_ID_NAME "s390x-fallback")
    else ()
        list(APPEND RAFAELIA_CORE_SOURCES vectra_fallback.c)
        add_compile_definitions(RAFAELIA_ARCH_FALLBACK=1)
        message(STATUS "RafaelIA ASM core skipped: unsupported CPU (${CMAKE_SYSTEM_PROCESSOR}); using portable fallback")
    endif ()
endif ()

if (RAFAELIA_REQUIRE_ASM AND NOT RAFAELIA_BACKEND_IS_ASM)
    message(FATAL_ERROR "RAFAELIA_REQUIRE_ASM is ON but no ASM backend is available for this target")
endif ()

add_library(RafaelIA_core STATIC ${RAFAELIA_CORE_SOURCES})

target_include_directories(RafaelIA_core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_compile_definitions(RafaelIA_core PUBLIC
    RAFAELIA_ARCH_ID_HEX=${RAFAELIA_ARCH_ID_HEX}
)

set_target_properties(RafaelIA_core PROPERTIES
    OUTPUT_NAME "rafaelia_core"
)

if (RAFAELIA_ENABLE_NEON AND CMAKE_SYSTEM_PROCESSOR MATCHES "^(armv7|armv7l|arm)$")
    target_compile_options(RafaelIA_core PRIVATE -mfpu=neon)
elseif (RAFAELIA_ENABLE_NEON AND CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64)$")
    target_compile_options(RafaelIA_core PRIVATE -march=armv8-a+simd)
endif ()

if (RAFAELIA_ENABLE_SIMD AND CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|amd64)$")
    target_compile_options(RafaelIA_core PRIVATE -msse2)
elseif (RAFAELIA_ENABLE_SIMD AND CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86|i[3-6]86)$")
    target_compile_options(RafaelIA_core PRIVATE -msse2)
endif ()

if (UNIX)
    target_link_libraries(RafaelIA_core PUBLIC m)
endif ()

message(STATUS "RafaelIA backend identity: ${RAFAELIA_ARCH_ID_NAME} (${RAFAELIA_ARCH_ID_HEX})")
message(STATUS "RafaelIA NEON flags enabled: ${RAFAELIA_ENABLE_NEON}")
message(STATUS "RafaelIA SIMD flags enabled: ${RAFAELIA_ENABLE_SIMD}")
